--- a/DiggerCpp/DiggerCpp.vcxproj.filters
+++ b/DiggerCpp/DiggerCpp.vcxproj.filters
@@ -50,4 +50,21 @@
   <ItemGroup>
     <Text Include="..\DiggerArea.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\pickDiamond.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\bon.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\shot.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\drop.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\goldPick.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+  </ItemGroup>
 </Project>
