--- a/DiggerCpp/DiggerCpp.vcxproj
+++ b/DiggerCpp/DiggerCpp.vcxproj
@@ -156,6 +156,13 @@
   <ItemGroup>
     <Text Include="..\DiggerArea.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\bon.wav" />
+    <Media Include="..\drop.wav" />
+    <Media Include="..\goldPick.wav" />
+    <Media Include="..\pickDiamond.wav" />
+    <Media Include="..\shot.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
